# Furries

./: .gitignore  simplescene.ass
maya-plugin/: CMakeLists.txt  setup.py
maya-plugin/include/: furriesFurNode.h  furriesSpringNode.h  simplecmd.h
maya-plugin/src/: furriesFurNode.cpp  furriesSpringNode.cpp  furriesplugin.cpp
shaders/: firstshader.cpp  mySimpleTemplate.py  simpleShader.mtd
